[package]
name = "s3-ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.4.0"
clap = { version = "4.4.10", features = ["derive"] }
env_logger = "0.10.1"
kdam = { version = "0.5", features = ["rayon"] }
log = "0.4.20"
rayon = "1.8.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"

[profile.dev.package."*"]
opt-level = 3
